@startuml

title __SEISLOG3's Class Diagram__\n

  namespace  {
    namespace ain {
      class main.Controller {
      }
    }
  }
  

  namespace  {
    namespace ain {
      class main.HibernateUtil {
      }
    }
  }
  

  namespace  {
    namespace ain {
      class main.Main {
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace ballasting {
        class main.ballasting.SeqData {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace ballasting {
        class main.ballasting.ballasting_Controller {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace battery {
        class main.battery.battery_Controller {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace entities {
        class main.entities.Ballasting {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace entities {
        class main.entities.Batteries {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace entities {
        class main.entities.ImportLog {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace entities {
        class main.entities.InsTestLimits {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace entities {
        class main.entities.InsTestRes {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace entities {
        class main.entities.Projects {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace general {
        class main.general.PropertiesWorker {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace general {
        class main.general.ReadData {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace general {
        class main.general.StoreData {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace insTest {
        class main.insTest.insTest_Controller {
        }
      }
    }
  }
  

  namespace  {
    namespace ain {
      namespace insTest {
        class main.insTest.resultTable {
        }
      }
    }
  }
  

  main.Main -up-|> javafx.application.Application
  main.entities.Ballasting o-- main.entities.Projects : projects
  main.entities.Batteries o-- main.entities.Projects : projects
  main.entities.ImportLog o-- main.entities.Projects : projects
  main.entities.InsTestLimits o-- main.entities.Projects : projects
  main.entities.InsTestRes o-- main.entities.Projects : projects


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
